force-app/main/default/objects/Profit_Center__c/Profit_Center__c.object-meta.xml
<CustomObject>
    <label>Profit Center</label>
    <nameField>
        <label>Profit Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>