force-app/main/default/objects/Profit_Center__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this record Active?(This field was created for NPL MA)</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>