force-app/main/default/objects/Profit_Center__c/fields/NPLMA_SAP_Profit_Center_Id__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_SAP_Profit_Center_Id__c</fullName>
    <externalId>true</externalId>
    <label>NPLMA SAP Profit Center Id</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>