force-app/main/default/objects/Profit_Center__c/fields/ProfitCenterDescription__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenterDescription__c</fullName>
    <description>The Profit centre code description(This field was created for NPL MA).</description>
    <formula>Name  &amp; &quot; - &quot; &amp;  Description__c</formula>
    <label>Profit Center Description</label>
    <type>Text</type>
</CustomField>