force-app/main/default/objects/Profit_Center__c/fields/USGAS_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>USGAS_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Profit Centers</relationshipLabel>
    <relationshipName>Profit_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>